chore: 标记茂名文旅设计已更新，需按新设计重新开发

--- a/memory/2026-01-28.md
+++ b/memory/2026-01-28.md
@@ -62,7 +62,7 @@
 | **2月1日** | 润德教育1月数据准备 | 监督收入、摊销数据 |
 | **2月1-3日** | 茂名文旅环境配置 | 服务器、数据库配置 |
 | **2月3-4日** | 润德教育增量计算 | 2.0系统订单 → 增量计算 |
-| **2月3-8日** | 茂名文旅前端+后端开发 | 主体开发阶段 |
+| **2月3-8日** | 茂名文旅前端+后端开发 | **按新设计重新开发** |
 | **2月3日** | 提醒3.0系统增量同步计算 |  |
 
 ### 🟢 P3 - 后续跟进
@@ -78,6 +78,10 @@
 ---
 
 ## 茂名文旅平台上线规划（Deadline：2月14日）
+
+### 设计更新状态
+- **设计稿：已更新**（需按新设计重新开发）
+- 移动端页面：需重新开发
 
 ### 拼车线路配置功能
 - 新增线路 CRUD API（PC端和移动端）
