--- a/project-rules/鹿状元-项目规则.md
+++ b/project-rules/鹿状元-项目规则.md
@@ -100,4 +100,27 @@ bash docker/scripts/init-dev.sh
 
 ---
 
+## 📚 相关文档
+
+### 开发环境管理
+- **开发环境管理指南**: `docs/开发环境管理指南.md`
+  - 包含所有开发环境脚本的使用说明
+  - dev-start.sh, dev-stop.sh, dev-restart.sh 等
+  - 开发环境配置和故障排除
+
+### 准生产环境部署
+- **准生产环境部署指南**: `docs/准生产环境部署指南.md`
+  - 一键部署脚本使用方法
+  - 服务器: 8.138.192.106 (阿里云)
+  - 部署脚本: `一键部署-prod.sh`
+  - Docker 容器化部署流程
+
+### SSL 证书管理
+- **SSL 证书管理指南**: `docs/SSL证书管理指南.md`
+  - SSL 证书自动检查和更新方案
+  - 准生产环境 (8.138.192.106) 和生产环境 (8.138.187.106) 的证书管理
+  - 证书更新脚本: check-ssl-expiry.sh, update-ssl-cert.sh, sync-ssl-to-prod.sh
+
+---
+
 *最后更新: 2026-03-01*
